--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-bootstrap": "~0.12.1",
+    "angular-ui-router": "~0.2.13"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
